--- a/src/components/Item/style.css
+++ b/src/components/Item/style.css
@@ -6,26 +6,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    transition: all 0.3s;
+    transition: all 0.3s ease-in-out;
 }
 
-/* .Item .item_button {
-    width: 24px;
-    height: 24px;
-    border-radius: 100%;
-    border: none;
-    background-color: #f0f0f0;
-    color: #000;
-    transition: all 0.3s;
-}
- */
 .Item:hover {
     background-color: #f84546;
     color: #fff;
 }
-
-/* .Item .item_button:hover {
-    cursor: pointer;
-    background-color: #fff;
-    color: #f84546;
-} */
