search, remove and add item

--- a/src/components/Item/style.css
+++ b/src/components/Item/style.css
@@ -13,3 +13,11 @@
     background-color: #f84546;
     color: #fff;
 }
+
+.Item--dark {
+    color: white;
+}
+
+.Item--dark:hover {
+    background-color: #f845458c;
+}
