--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -9,3 +9,21 @@
 .App--dark {
   background-color: #000;
 }
+
+/* .change-theme {
+  background-color: #F84546;
+  border: 1px solid #fff;
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  cursor: pointer;
+}
+
+.change-theme--dark {
+  border: 1px solid #F84546;
+  background-color: white;
+  color: #F84546;
+} */
